deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-bt-sync
  labels:
    app.kubernetes.io/name: kube-bt-sync
