deploy/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-bt-sync
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-bt-sync
  template:
    metadata:
      labels:
        app: kube-bt-sync
    spec:
      serviceAccountName: kube-bt-sync-sa
      containers:
      - name: sync-server
        image: your-repo/kube-bt-sync:latest # 改成你的 Dockerhub 镜像名
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kube-bt-sync-svc
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32080
  selector:
    app: kube-bt-sync
