deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-bt-sync
  namespace: kube-bt-sync
  labels:
    app.kubernetes.io/name: kube-bt-sync
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kube-bt-sync
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
